apps/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: argocd-server
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`argocd.homelab.kszpakowski.com`)
    priority: 10
    services:
    - name: argocd-server
      port: 80
  - kind: Rule
    match: Host(`argocd.homelab.kszpakowski.com`) && Headers(`Content-Type`, `application/grpc`)
    priority: 11
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
  tls:
    secretName: argocd-tls
